# chip8-emule

./: Cargo.toml  README.md
cpu/: Cargo.toml
cpu/src/: display.rs  fontset.rs  instructions.rs  keypad.rs  lib.rs  utils.rs
renderer/: Cargo.toml
renderer/src/: lib.rs  shader.rs
renderer/src/shaders/: fragment.fs  vertex.vs
src/: backup_main.rs  main.rs
web-renderer/: Cargo.toml
