[package]
name = "chip8-emule"
version = "0.1.0"
authors = ["alissonsz <alisson_tecsouza@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
renderer = {path = "./renderer"}
cpu = {path = "./cpu"}

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"