[package]
name = "renderer"
version = "0.1.0"
authors = ["alissonsz <alisson_tecsouza@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
gl = "0.10.0"
image = "0.19.0"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"